--- a/erasmus/src/erasmus/accounts/templates/accounts/password_change.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/password_change.html
@@ -1,10 +1,12 @@
-{% block title %}Change password{% endblock %}
+{% extends 'accounts/navbar.html' %}
+{% load crispy_forms_tags %}
 
-{% block breadcrumb %}
-  <li class="breadcrumb-item active">Change password</li>
+{% block header_content %}
+<div class="header">Change Password</div>
 {% endblock %}
 
-{% block content %}
+{% block page_content %}
+<div class="page_content">
   <div class="row">
     <div class="col-lg-6 col-md-8 col-sm-10">
       <form method="post" novalidate>
@@ -14,4 +16,5 @@
       </form>
     </div>
   </div>
+</div>
 {% endblock %}
