BilkentCourse model object

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -30,7 +30,7 @@
                 {% for course in user_unmerged_courses %}
                 <tr>
                     <td id="count"></td>
-                    <td>{{course.course_codes}}</td>
+                    <td>{{course.code}}</td>
                     <td>{{course.course_name}}</td>
                     <td>{{course.course_credit}}</td>
                     <td>{{course.bilkent_equivalent}}</td>
@@ -53,7 +53,7 @@
                 {% for course in courseList %}
                 <tr>
                     <td id="count"></td>
-                    <td>{{course.course_codes}}</td>
+                    <td>{{course.code}}</td>
                     <td>{{course.course_name}}</td>
                     <td>{{course.course_credit}}</td>
 
@@ -121,7 +121,7 @@
                 {% for course in approved_unmerged_courses %}
                 <tr>
                     <td id="count"></td>
-                    <td>{{course.course_codes}}</td>
+                    <td>{{course.code}}</td>
                     <td>{{course.course_name}}</td>
                     <td>{{course.course_credit}}</td>
                     <td>{{course.bilkent_equivalent}}</td>
@@ -134,7 +134,7 @@
                 {% for course in courseList %}
                 <tr>
                     <td id="count"></td>
-                    <td>{{course.course_codes}}</td>
+                    <td>{{course.code}}</td>
                     <td>{{course.course_name}}</td>
                     <td>{{course.course_credit}}</td>
 
