--- a/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
@@ -28,6 +28,9 @@
                     <td><a href="../../profile/{{user_course.user.user.pk}}">{{user_course.user.user.name}} <i class="fas fa-external-link-alt"></i></a></td>
                     <td><a>{{user_course.user.university}}</a></td>
                     <td><a>{{user_course.course.course_name}} waiting for approval</a></td>
+                    <td></td>
+                    <td><a class="button" href="/approve-course/{{user_course.course.pk}}">Approve</a></td>
+                    <td><a class="button" href="/reject-course/{{user_course.course.pk}}">Reject</a></td>
                 </tr>
                 {%endfor%}
                 </tbody>
