--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -33,7 +33,7 @@
                     <td>{{course.code}}</td>
                     <td>{{course.course_name}}</td>
                     <td>{{course.course_credit}}</td>
-                    <td>{{course.bilkent_equivalent.course_name}}</td>
+                    <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
                     <td>{{course.bilkent_equivalent.course_credit}}</td>
                     <td>NULL</td>
                     {% if course.approved %}
@@ -58,7 +58,7 @@
                     <td>{{course.course_credit}}</td>
 
                     {% if courseList.0 is course %}
-                    <td rowspan="2">{{course.bilkent_equivalent.course_name}}</td>
+                    <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
                     <td rowspan="2">{{course.bilkent_equivalent.course_credit}}</td>
                     <td rowspan="2">NULL</td>
                     {% if course.approved %}
@@ -123,7 +123,7 @@
                     <td>{{course.code}}</td>
                     <td>{{course.course_name}}</td>
                     <td>{{course.course_credit}}</td>
-                    <td>{{course.bilkent_equivalent.course_name}}</td>
+                    <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
                     <td>{{course.bilkent_equivalent.course_credit}}</td>
                     <td>NULL</td>
                     <td><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
@@ -138,7 +138,7 @@
                     <td>{{course.course_credit}}</td>
 
                     {% if courseList.0 is course %}
-                    <td rowspan="2">{{course.bilkent_equivalent.course_name}}</td>
+                    <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
                     <td rowspan="2">{{course.bilkent_equivalent.course_credit}}</td>
                     <td rowspan="2">NULL</td>
                     <td rowspan="2"><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
