--- a/erasmus/src/erasmus/communication/templates/communication/forum.html
+++ b/erasmus/src/erasmus/communication/templates/communication/forum.html
@@ -7,10 +7,15 @@
 {% endblock %}
 
 {% block header_content %}
-<div class="header">Forum</div>
+
+ <div class="header" style="margin-bottom: 20px;">Forum
+    <div class="header_buttons">
+        <button type="button" onclick="location.href = '../../'">Add Post</button>
+    </div>
+
+</div>
+
 {% endblock %}
-
-
 {% block page_content %}
 <div class="page_content">
 
@@ -42,6 +47,14 @@
                         </tr>
 
                         <!-- Forum  posts part-->
+                        {% for post in posts %}
+                        <tr>
+                           <td class="forum-title"><a href="forum_post.html"> post.topic </a></td>
+                            <td class="forum-initiatier"><a href="forum_post.html"> post.user</a></td>
+                            <td class="forum-answers"><a href="forum_post.html">9</a></td>
+                        </tr>
+                    {%endfor%}
+
                         <tr class="rows">
                             <td class="forum-title"><a href="forum_post.html"> Pasaport ücretlerini okul mu karşılıyor</a></td>
                             <td class="forum-initiatier"><a href="forum_post.html">Mustafa Hamit</a></td>
