--- a/erasmus/src/erasmus/communication/templates/communication/forum.html
+++ b/erasmus/src/erasmus/communication/templates/communication/forum.html
@@ -10,7 +10,7 @@
 
  <div class="header" style="margin-bottom: 20px;">Forum
     <div class="header_buttons">
-        <button type="button" onclick="location.href = '../../'">Add Post</button>
+        <button type="button" onclick="location.href = '../../add-post'">Add Post</button>
     </div>
 
 </div>
