--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -4,7 +4,7 @@
 <div class="header" style="margin-bottom: 20px;">Frequently Asked Questions
     {% if not user_type == "Student" %}
     <div class="header_buttons">
-        <button type="button" onclick="location.href = '../../add-question'">Add a New FAQ</button>
+        <button type="button" onclick="location.href = '../../add-question'">Add a New Question</button>
     </div>
     {% endif %}
 </div>
