--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -22,7 +22,7 @@
                     </th>
                     <th style="width:7%">Credits</th>
                     <th style="width:20%">Elective Requirement Exemptions only: Course code(s) of directly equivalent course(s), if any **</th>
-                    <th style="width:10%">Is Approved</th>
+                    <th style="width:10%">Status</th>
                     <th style="width:10%">Operation</th>
                 </tr>
                 </thead>
