--- a/erasmus/src/erasmus/communication/templates/communication/forum.html
+++ b/erasmus/src/erasmus/communication/templates/communication/forum.html
@@ -51,7 +51,7 @@
                         {% for post in posts %}
                         <tr>
                            <td class="forum-title" style="text-align: left"><a href="forum_post.html"> {{post.topic}} </a></td>
-                            <td class="forum-initiatier"><a href="forum_post.html"> {{post.user.name}}</a></td>
+                            <td class="forum-initiatier"><a href="forum_post.html"> {{post.user.user.name}}</a></td>
                             <td class="forum-answers"><a href="forum_post.html">9</a></td>
                              <th>
                                  {% if this.user.name == post.user.name %}
