--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -90,68 +90,64 @@
         <h2>Add Course</h2>
         <div class="buttons">
 
-            <!--<button type="button" onclick="toggleButtons(this, 2)" id="1">Add Previously Added Course</button>-->
+            <button type="button" onclick="toggleButtons(this, 1)" id="1">Add Previously Added Course</button>
             <button type="button" onclick="location.href = '../../add-unapproved-course/'">Add New Course</button>
-            <button type="button" onclick="toggleButtons(this, 2)" id="2">Merge Courses</button>
-            <button type="button" onclick="location.href = '../../create-document/'" id="3">Create Document</button>
+            <button type="button" onclick="location.href = '../../create-document/'">Create Document</button>
         </div>
 
 
-        <td>
+        <div hidden="hidden" id="toggle-element-1">
             <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
             <div style="height:300px;overflow:auto;">
+                <table class="sortable" id="filtered_list" style="width:100%;">
+                    <thead>
+                    <tr>
+                        <th style="width:6%">Count</th>
+                        <th style="width:10%">Course Code</th>
+                        <th style="width:20%">Course Name</th>
+                        <th style="width:7%">Credits</th>
+                        <th style="width:20%">Course Code and Name for a Required Course,
+                        Elective Group Name for an Elective Requirement
+                        </th>
+                        <th style="width:7%">Credits</th>
+                        <th style="width:20%">Elective Requirement Exemptions only: Course code(s) of directly equivalent course(s), if any **</th>
+                        <th style="width:10%">Operation</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for course in approved_unmerged_courses %}
+                    <tr>
+                        <td id="count"></td>
+                        <td>{{course.code}}</td>
+                        <td>{{course.course_name}}</td>
+                        <td>{{course.course_credit}}</td>
+                        <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
+                        <td>{{course.bilkent_equivalent.course_credit}}</td>
+                        <td>NULL</td>
+                        <td><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
+                    </tr>
+                    {%endfor%}
+                    {% for courseKey, courseList in approved_merged_course_dict.items %}
+                    {% for course in courseList %}
+                    <tr>
+                        <td id="count"></td>
+                        <td>{{course.code}}</td>
+                        <td>{{course.course_name}}</td>
+                        <td>{{course.course_credit}}</td>
 
-            <table class="sortable" id="filtered_list" style="width:100%;">
-                <thead>
-                <tr>
-                    <th style="width:6%">Count</th>
-                    <th style="width:10%">Course Code</th>
-                    <th style="width:20%">Course Name</th>
-                    <th style="width:7%">Credits</th>
-                    <th style="width:20%">Course Code and Name for a Required Course,
-                    Elective Group Name for an Elective Requirement
-                    </th>
-                    <th style="width:7%">Credits</th>
-                    <th style="width:20%">Elective Requirement Exemptions only: Course code(s) of directly equivalent course(s), if any **</th>
-                    <th style="width:10%">Operation</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for course in approved_unmerged_courses %}
-                <tr>
-                    <td id="count"></td>
-                    <td>{{course.code}}</td>
-                    <td>{{course.course_name}}</td>
-                    <td>{{course.course_credit}}</td>
-                    <td>{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
-                    <td>{{course.bilkent_equivalent.course_credit}}</td>
-                    <td>NULL</td>
-                    <td><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
-                </tr>
-                {%endfor%}
-                {% for courseKey, courseList in approved_merged_course_dict.items %}
-                {% for course in courseList %}
-                <tr>
-                    <td id="count"></td>
-                    <td>{{course.code}}</td>
-                    <td>{{course.course_name}}</td>
-                    <td>{{course.course_credit}}</td>
-
-                    {% if courseList.0 is course %}
-                    <td rowspan="2">{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
-                    <td rowspan="2">{{course.bilkent_equivalent.course_credit}}</td>
-                    <td rowspan="2">NULL</td>
-                    <td rowspan="2"><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
-                    {% endif %}
-
-                </tr>
-                {% endfor %}
-                {% endfor %}
-                </tbody>
-            </table>
-
+                        {% if courseList.0 is course %}
+                        <td rowspan="2">{{course.bilkent_equivalent.course_code}}: {{course.bilkent_equivalent.course_name}}</td>
+                        <td rowspan="2">{{course.bilkent_equivalent.course_credit}}</td>
+                        <td rowspan="2">NULL</td>
+                        <td rowspan="2"><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
+                        {% endif %}
+                    </tr>
+                    {% endfor %}
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-            </td>
     </div>
 </div>
 {% endblock %}
