--- a/erasmus/src/erasmus/accounts/templates/accounts/home.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/home.html
@@ -10,7 +10,7 @@
 
 
 {% block page_content %}
-<div class = "mainBox">
+<div class = "page_content">
 
     <div class = "status">
         {% if user_type == "Student" %}
