Todo and done list filter bug fix

--- a/erasmus/src/erasmus/accounts/templates/accounts/home.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/home.html
@@ -26,7 +26,7 @@
 
         <section class = "toDo">
             <div id="notif_table">
-                <input type="text" id="filter_input" onkeyup="filterToDo()" style="width:100%" placeholder="Search for To Do">
+                <input type="text" id="filter_input" onkeyup="filterToDo('filter_input', 'filtered_list')" style="width:100%" placeholder="Search for To Do">
                 <table id="filtered_list" style="width:100%">
                     <tbody>
                     {% for flaggedToDo in flagged_todo %}
@@ -71,8 +71,8 @@
 
         <section class = "done">
             <div id="done_table">
-                <input type="text" id="filter_input" onkeyup="filterToDo()" style="width:100%" placeholder="Search for Done">
-                <table id="filtered_list" style="width:100%">
+                <input type="text" id="filter_input2" onkeyup="filterToDo('filter_input2', 'filtered_list2')" style="width:100%" placeholder="Search for Done">
+                <table id="filtered_list2" style="width:100%">
                     <tbody>
                         {% for done in done %}
                         <tr>
