--- a/erasmus/src/erasmus/accounts/templates/accounts/student_list.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_list.html
@@ -1,1 +1,5 @@
-<h1> STUDENT LIST </h1>
+{% extends 'accounts/navbar.html' %}
+
+{% block header_content %}
+<div class="header">Student List</div>
+{% endblock %}
