--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -16,7 +16,7 @@
             <table id="filtered_list" style="width:100%">
                 <thead>
                 <tr>
-                    <th style="width:65px" id="count">Count</th>
+                    <th style="width:65px" id="count"></th>
                     <th style="width:175px">Type</th>
                     <th style="width:250px">Name</th>
                     <th style="width:225px">Date</th>
