--- a/erasmus/src/erasmus/accounts/templates/accounts/student_list.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_list.html
@@ -10,11 +10,11 @@
     <table style="table-layout:fixed; width: 100%">
         <thead>
             <tr>
-                <td>Name</td>
-                <td>Status</td>
-                <td>University</td>
-                <td>Coordinator</td>
-                <td>Profile</td>
+                <th style="width:20%">Name</th>
+                <th style="width:20%">Status</th>
+                <th style="width:30%">University</th>
+                <th style="width:20%">Coordinator</th>
+                <th style="width:10%">Profile</th>
         </tr>
         </thead>
 
