--- a/erasmus/src/erasmus/accounts/static/student_profile_from_coordinator.css
+++ b/erasmus/src/erasmus/accounts/static/student_profile_from_coordinator.css
@@ -2,17 +2,13 @@
   width: 98%;
   height: 450px;
 }
-.photo-mail{
-  display: flex;
-}
+
 #data-table{
   width: 750px;
   background-color: #130d3834;
 
 }
-.photo-mail{
-  width: 98.5%;
-}
+
 #user-name{
   width: 100%;
   padding-top: 50px;
@@ -52,21 +48,21 @@
   width: 250px;
   height: 150px;
   position: absolute;
-  bottom: 20;
-  right: 20;
+  bottom: 20px;
+  right: 20px;
 }
 #button-part1{
   position: absolute;
- bottom: 100;
-  right: 40;
+ bottom: 100px;
+  right: 40px;
   border: none;
   cursor: pointer;
 border: solid 3px rgba(0, 0, 0, 0.58);
 }
 #button-part2{
   position: absolute;
-  bottom: 40;
-  right: 47;
+  bottom: 40px;
+  right: 47px;
   border: none;
   cursor: pointer;
   border: solid 3px rgba(0, 0, 0, 0.58);
