--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -7,57 +7,48 @@
 {% endblock %}
 
 {% block header_content %}
-<div class="header">User´s Name</div>
+<div class="header" style="margin-bottom: 20px;"><i class="fa fa-user"></i>User´s Name
+    <div class="header_buttons">
+        <button type="button" onclick="location.href = '#'">Message</button>
+    </div>
+</div>
 {% endblock %}
 
-
 {% block page_content %}
-
 <div class="page_content">
-            <div class="viewed-student-info">
-                <div class = "photo-mail">
-                    <img src="../../static/user.png" alt="user" width="100px" height="100px" >
-                    <div id="mail-icon">
-                        <button id="mail-button">
-                            <img  src="../../static/send_message2.png" alt="message" width="90" height="70">
-                        </button>
-                    </div>
-
-                </div>
-                <hr>
-                <div id= "data-page">
-                    <div id= "data-table">
-                        <table id="user-info-table">
-                            <tr>
-                                <td >E-mail: </td>
-                                <td >x.y@ug.bilkent.edu.tr</td>
-                            </tr>
-                            <tr>
-                                <td>Phone: </td>
-                                <td>0555 555 55 55</td>
-                            </tr>
-                            <tr>
-                                <td>University/Mobility Period </td>
-                                <td> unknown </td>
-                            </tr>
-                            <tr>
-                                <td>Status</td>
-                                <td>Erasmus Successful</td>
-                            </tr>
-                            <tr>
-                                <td>Id</td>
-                                <td>2xxxxxxx</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="courses-button">
-                        <button id="button-part1" style="background-color: #130d3834;"> Student´s Courses </button>
-                        <button id="button-part2" style="background-color: #130d3834;" > Student´s Files </button>
-                    </div>
-                </div>
+    <div class="viewed-student-info">
+        <hr>
+        <div id= "data-page">
+            <div id= "data-table">
+                <table id="user-info-table">
+                    <tr>
+                        <td >E-mail: </td>
+                        <td >x.y@ug.bilkent.edu.tr</td>
+                    </tr>
+                    <tr>
+                        <td>Phone: </td>
+                        <td>0555 555 55 55</td>
+                    </tr>
+                    <tr>
+                        <td>University/Mobility Period </td>
+                        <td> unknown </td>
+                    </tr>
+                    <tr>
+                        <td>Status</td>
+                        <td>Erasmus Successful</td>
+                    </tr>
+                    <tr>
+                        <td>Id</td>
+                        <td>2xxxxxxx</td>
+                    </tr>
+                </table>
             </div>
-
-
+            <div class="courses-button">
+                <button id="button-part1" style="background-color: #130d3834;"> Student´s Courses </button>
+                <button id="button-part2" style="background-color: #130d3834;" > Student´s Files </button>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
