--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -18,8 +18,9 @@
                 <tr>
                     <th style="width:65px" id="count"></th>
                     <th style="width:175px">Type</th>
-                    <th style="width:250px">Name</th>
-                    <th style="width:225px">Date</th>
+                    <th style="width:350px">Name</th>
+                    <th style="width:300px">Date</th>
+                    <th style="width:25px">File format</th>
                     <th style="width:350px" colspan="2">Operations</th>
                 </tr>
                 </thead>
@@ -30,6 +31,7 @@
                     <td style="width:150px">{{document.document_type}}</td>
                     <td style="width:175px">{{document.document_name}}</td>
                     <td style="width:200px">{{document.date}}</td>
+                    <td style="width:175px">{{document.get_file_format}}</td>
                     <td style="width:350px;">
                         <button href="#" type="button">View</button>
                         <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
